# gummy-reminder

./: CHANGELOG.md  GummyReminder.hs  Readme.md  gummy-reminder-dev.dump  gummy-reminder.cabal
Models/: Card.hs  Deck.hs
app/: Main.hs
app/Controllers/: CLIController.hs  DeckController.hs
app/Models/: Card.hs  Deck.hs
app/Util/: CLIController.hs  DeckController.hs  Txt.hs  TxtController.hs
database/: Decks.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/: .gitignore  Readme.md
haskell/app/Models/: Card.hs
haskell/app/Util/: CLIController.hs  DeckController.hs  TxtController.hs
prolog/: .gitignore  README.md  package.json
prolog/database/: database.json
prolog/src/: index.pl
prolog/src/controllers/: CLIController.pl  cardController.pl  deckController.pl
prolog/src/models/: Card.pl  Deck.pl
prolog/src/util/: JsonFunctions.pl  decks.json
