cabal-version:      2.4
name:               gummy-reminder
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Pedro Henrique
maintainer:         pedronexy88@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    Readme.md

executable gummy-reminder
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Models.Card,
        Models.Deck,
        Util.CLIController,
        Util.DeckController,
        Util.TxtController

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.0.0,
                      directory>=1.3.6.0
    hs-source-dirs:   app
    default-language: Haskell2010
